--- a/uqlibrary-papercut.html
+++ b/uqlibrary-papercut.html
@@ -49,13 +49,13 @@ Element providing an overview for current papercut balance
 
         </core-toolbar>
         <div id="content" class="body-footer-container">
-          <div class="card" z="1">
+          <div class="responsiveCard" z="1">
             <div class="subhead cardSection cardTitle">Current Printing Balance:  ${{papercut.balance}}
               <div class="caption">
                 Last update: {{retrievedAt}}
               </div>
             </div>
-
+              <br>
             <div class="subhead cardSection cardTitle">
               Online Top-up
               <div horizontal layout around-justified wrap>
