--- a/uqlibrary-papercut.html
+++ b/uqlibrary-papercut.html
@@ -35,11 +35,13 @@ Element providing an overview for current papercut balance
     <uqlibrary-ga id="ga" appName="papercut"></uqlibrary-ga>
 
     <core-drawer-panel id="drawerPanel" class="drawer" drawerWidth="256px" responsiveWidth="768px">
-      <core-header-panel drawer>
-        <uqlibrary-menu account="{{user}}"></uqlibrary-menu>
-      </core-header-panel>
 
-      <core-header-panel main class="main">
+      <div drawer class="left-drawer" fit style="overflow: scroll;">
+        <uqlibrary-menu id="uqlibraryMenu" account="{{user}}"></uqlibrary-menu>
+      </div>
+
+      <div main layout vertical class="main">
+
         <core-toolbar>
 
           <core-a11y-keys id="a11yToolBarLeftButton" target="{{$.toolBarLeftButton}}" keys="{{keyboardNavigationKeys}}"
@@ -48,7 +50,9 @@ Element providing an overview for current papercut balance
           <h1 flex id="toolbar-page-title">Library Printing</h1>
 
         </core-toolbar>
-        <div id="content" class="body-footer-container">
+        <div main layout vertical fit relative style="margin-top: 64px;" class="body-footer-container">
+          <div id="content" fit style="overflow: scroll;">
+
           <paper-shadow class="card" z="1">
             <div class="cardSection noBorder">
               <div class="subhead cardTitle">
@@ -83,14 +87,14 @@ Element providing an overview for current papercut balance
           </paper-shadow>
           </div>
         </div>
+
         <uqlibrary-persistent-footer id="persistentFooter">
           <div class="footerButtons" layout horizontal end-justified>
             <paper-button on-tap="{{papercutAppClicked}}"><a target="_blank" href="{{papercutAppUrl}}">Login to Papercut</a></paper-button>
           </div>
         </uqlibrary-persistent-footer>
 
-
-      </core-header-panel>
+      </div>
 
     </core-drawer-panel>
 
