--- a/test/index.html
+++ b/test/index.html
@@ -1,40 +1,22 @@
 <!doctype html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
+  <title>uqlibrary-papercut tests</title>
 
-  <head>
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
-    <title>Core Elements Test Runner</title>
-    <meta charset="UTF-8">
+  <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="../bower_components/web-component-tester/browser.js"></script>
+</head>
 
-    <script>
-      function isIE () {
-        var myNav = navigator.userAgent.toLowerCase();
-        return (myNav.indexOf('msie') != -1) ? parseInt(myNav.split('msie')[1]) : false;
-      }
-
-      if (! ('registerElement' in document
-        && 'createShadowRoot' in HTMLElement.prototype
-        && 'import' in document.createElement('link')
-        && 'content' in document.createElement('template'))) {
-        // IE 8 and 9 throw errors if you try to include webcomponents.js, which prevents other user messages working
-        if (!isIE() || isIE () > 9) {
-          document.write('<script src="../../uqlibrary-elements/0.5.5/webcomponentsjs/webcomponents.min.js"><\/script>');
-        }
-      }
-    </script>
-    <script src="../../web-component-tester/browser.js"></script>
-  </head>
-
-  <body>
-
-  <script>
-    document.cookie="UQLMockData=enabled";
-    WCT.loadSuites([
-      'uqlibrary-papercut-test-unit.html',
-      'uqlibrary-papercut-test-integration.html',
-    ]);
-  </script>
-
-  </body>
-
+<body>
+<script>
+  document.cookie="UQLMockData=enabled";
+  // Load and run all tests (.html, .js) as one suite:
+  WCT.loadSuites([
+    'uqlibrary-papercut-test-unit.html',
+    'uqlibrary-papercut-test-integration.html'
+  ]);
+</script>
+</body>
 </html>
