Revert "Merge branch 'polymer1.0' of github.com:uqlibrary/uqlibrary-papercut into polymer1.0"
This reverts commit 7e8e065532035b29fea3ef92d1e6e0472cb6a8a6.

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
-  <title>uqlibrary-borrowing tests</title>
+  <title>uqlibrary-papercut tests</title>
 
   <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
   <script src="../bower_components/web-component-tester/browser.js"></script>
