--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
 
-  <title>uqlibrary-borrowing</title>
+  <title>uqlibrary-papercut</title>
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="bower_components/iron-component-page/iron-component-page.html">
 </head>
 <body>
-<iron-component-page src="elements/uqlibrary-borrowing.html"></iron-component-page>
+<iron-component-page src="elements/uqlibrary-papercut.html"></iron-component-page>
 
 <script>
   (function () {
