--- a/elements/uqlibrary-papercut.html
+++ b/elements/uqlibrary-papercut.html
@@ -24,7 +24,7 @@ Example:
     }
 
     .card-actions {
-      @apply(--layout-horizontal-wrap);
+      @apply(--layout-horizontal);
       @apply(--layout-around-justified);
       @apply(--layout-wrap);
     }
