--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 
     <title>uqlibrary-papercut</title>
 
-    <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+    <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="../elements/uqlibrary-papercut.html">
 </head>
 <body class="fullbleed">
