--- a/elements/elements.html
+++ b/elements/elements.html
@@ -1,24 +1,24 @@
 <!-- Polymer -->
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../../polymer/polymer.html">
 
 <!-- Polymer Elements -->
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../bower_components/paper-styles/paper-styles.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/paper-card/paper-card.html">
-<link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
-<link rel="import" href="../bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../paper-styles/paper-styles.html">
+<link rel="import" href="../../paper-button/paper-button.html">
+<link rel="import" href="../../paper-card/paper-card.html">
+<link rel="import" href="../../paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../../paper-header-panel/paper-header-panel.html">
 
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../iron-icon/iron-icon.html">
+<link rel="import" href="../../iron-icons/iron-icons.html">
+<link rel="import" href="../../paper-icon-button/paper-icon-button.html">
 
 <!-- UQL Libraries -->
-<link rel="import" href="../bower_components/uqlibrary-styles/common-styles.html">
-<link rel="import" href="../bower_components/uqlibrary-styles/app-theme.html">
+<link rel="import" href="../../uqlibrary-styles/common-styles.html">
+<link rel="import" href="../../uqlibrary-styles/app-theme.html">
 
-<link rel="import" href="../bower_components/uqlibrary-api/uqlibrary-api-account.html">
-<link rel="import" href="../bower_components/uqlibrary-api/uqlibrary-api-papercut.html">
-<link rel="import" href="../bower_components/uqlibrary-ga/uqlibrary-ga.html">
+<link rel="import" href="../../uqlibrary-api/uqlibrary-api-account.html">
+<link rel="import" href="../../uqlibrary-api/uqlibrary-api-papercut.html">
+<link rel="import" href="../../uqlibrary-ga/uqlibrary-ga.html">
 
-<script type="text/javascript" src="../bower_components/moment/moment.js"></script>
+<script type="text/javascript" src="../../moment/moment.js"></script>
