update panel title to match the side menu and rename login button text [#119706021]

--- a/elements/uqlibrary-papercut.html
+++ b/elements/uqlibrary-papercut.html
@@ -97,7 +97,7 @@ Example:
       </paper-header-panel>
       <!-- Bottom footer -->
       <paper-toolbar class="uqlibrary-app-footer right">
-        <paper-button class="button-colored-accent" on-tap="_openPaperCut">Login to papercut</paper-button>
+        <paper-button class="button-colored-accent" on-tap="_openPaperCut" aria-label$="{{loginBtnText}}">[[loginBtnText]]</paper-button>
       </paper-toolbar>
     </div>
 
