--- a/elements/uqlibrary-papercut.html
+++ b/elements/uqlibrary-papercut.html
@@ -51,6 +51,7 @@ Example:
   <!-- Template -->
   <template>
     <uqlibrary-api-papercut id="papercutApi"></uqlibrary-api-papercut>
+    <uqlibrary-api-account id="accountApi"></uqlibrary-api-account>
     <uqlibrary-ga id="ga" app-name="papercut"></uqlibrary-ga>
 
     <div class="fit layout vertical">
