--- a/elements/uqlibrary-papercut.html
+++ b/elements/uqlibrary-papercut.html
@@ -4,11 +4,10 @@
 `<uqlibrary-papercut>` is a sample element of how UQ library apps should be structured
 
 Example:
+
     <uqlibrary-papercut></uqlibrary-papercut>
 
 @demo
-
-@demo demo/index.html Demo of the Full view
 -->
 <dom-module id="uqlibrary-papercut">
   <!-- Template -->
@@ -16,19 +15,19 @@ Example:
     <!-- All element styles -->
     <style is="custom-style" include="iron-flex iron-flex-alignment common-styles">
       :host {
-        @apply(--uql-app-host);
+        @apply --uql-app-host;
       }
 
       .container {
         padding: 16px;
-        @apply(--layout-horizontal);
-        @apply(--layout-center-justified);
+        @apply --layout-horizontal;
+        @apply --layout-center-justified;
       }
 
       .card-actions {
-        @apply(--layout-horizontal);
-        @apply(--layout-around-justified);
-        @apply(--layout-wrap);
+        @apply --layout-horizontal;
+        @apply --layout-around-justified;
+        @apply --layout-wrap;
       }
 
       paper-card {
