move packages from bower to npm [PT #167659453]

--- a/elements/elements.html
+++ b/elements/elements.html
@@ -21,4 +21,4 @@
 <link rel="import" href="../../uqlibrary-api/uqlibrary-api-papercut.html">
 <link rel="import" href="../../uqlibrary-ga/uqlibrary-ga.html">
 
-<script type="text/javascript" src="../../moment/moment.js"></script>
+<script type="text/javascript" src="../node_modules/moment/moment.js"></script>
